--- a/src/theme/DocItem/Layout/styles.module.css
+++ b/src/theme/DocItem/Layout/styles.module.css
@@ -2,6 +2,11 @@
   margin-bottom: 50px;
 }
 
+.docItemContainer > article {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 .giscus {
   display: block;
   margin-top: 50px;
